# agentic-data-curation

./: .gitignore  CLAUDE.md  Makefile  build_all_metadata.py  pyproject.toml  stats.py  sweep_grok.sh  sync_data.sh
.claude/: settings.json
.claude/hooks/: safety-check.sh
.claude/skills/curate/: SKILL.md  reference.md
configs/: __init__.py  chatgpt.py  flux1.py  flux2.py  gpt_image_1.py  grok.py  instagram_ai_influencer.py  instagram_real.py  midjourney_v7.py  nano_banana.py  nano_banana_1_2.py  recraft_3_4.py  seedream4.py  soul2.py
docs/: DESIGN.md  LESSONS_FLUX1.md  LESSONS_FLUX2.md  LESSONS_GPT_IMAGE_1.md  LESSONS_GROK.md  LESSONS_INSTAGRAM.md  LESSONS_MASTER.md  LESSONS_MIDJOURNEY_V7.md  LESSONS_RECRAFT_3_4.md  LESSONS_SEEDREAM4.md  LESSONS_SOUL2.md  WORKLOG_20260313_1943_nano_banana.md  WORKLOG_20260313_1943_nano_banana_1_2.md  WORKLOG_20260314_0335_chatgpt.md  WORKLOG_20260314_0335_gpt_image_1.md  WORKLOG_20260314_1930_seedream4.md  WORKLOG_20260315_0700_flux1.md  WORKLOG_20260316_0100_flux2.md  WORKLOG_20260317_1500_soul2.md  WORKLOG_20260319_0100_recraft_3_4.md  WORKLOG_20260320_0100_midjourney_v7.md
scrapers/: aigcarena.py  base.py  civitai.py  civitai_simple.py  freepik.py  grok_imagine.py  higgsfield.py  instagram.py  midjourney.py  openart.py  recraft.py  reddit.py  tensorart.py  twitter.py  yodayo.py
scripts/: build_all_metadata.py  stats.py  sweep_grok.sh  sync_data.sh
validators/: batch_classify.py  batch_review.py  classify.py  image_validator.py  pipeline.py  serve_joycaption.py  split_grids.py  vlm_filter.py
