[project]
name = "agent-data-curation"
version = "0.1.0"
description = "Agentic data curation toolkit for AI-generated image datasets"
requires-python = ">=3.12"
dependencies = [
    "pillow",
    "requests",
    "imagehash",
    "click>=8.3.1",
    "gallery-dl>=1.31.9",
    "fsd-detector",
    "ray[serve]>=2.53.0",
    "accelerate",
    "tabulate",
]

[project.optional-dependencies]
scraping = [
    "scrapling",
    "beautifulsoup4",
    "selenium",
]
playwright = [
    "playwright",
]
vlm = [
    "vllm",
    "transformers",
]

[tool.hatch.build.targets.wheel]
packages = ["scrapers", "validators", "configs"]

[tool.uv.sources]
fsd-detector = { git = "ssh://git@github.com/ductai199x/Forensic-Self-Descriptions-CVPR25.git" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
